[tool.poetry]
name = "edfi-notebook"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
jupyter = "^1.0.0"
notebook = "^6.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
